fix: use java.util.Base64 instead of javax.xml.bind.DatatypeConverter for encoding Base64