@@ -9,11 +9,11 @@ import org.dbunit.dataset.stream.IDataSetConsumer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 /**
  * Created by pestano on 11/09/16.
@@ -116,7 +116,7 @@ public class JSONWriter implements IDataSetConsumer {
                 sb.append('"');
             }
             if (values[i] instanceof byte[]) {
-                sb.append(DatatypeConverter.printBase64Binary((byte[]) values[i]).replace(NEW_LINE, "\\n"));
+                sb.append(Base64.getEncoder().encodeToString((byte[]) values[i]).replace(NEW_LINE, "\\n"));
             } else {
                 sb.append(currentValue.toString()
                         .replace("\\", "\\\\")
